# vite-shadcn-fastapi-app

./: DEVELOPMENT.md  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .env.example  .flake8  Dockerfile  README.md  fly.toml  init_demo_data.py  main.py  pyproject.toml  requirements.txt  x.py
backend/alembic/: env.py
backend/alembic/versions/: 001_add_initial_tables.py  001_initial_migration.py  002_add_dataset_table.py  003_dataset_add_fields.py  004_add_field_primary_key_column_to_dataset_.py  005_add_unique_constraint_to_user_profile_.py  085d08cac56b_initial_tables.py  0ed06c029f14_add_user_table.py  4e717a19aa9f_initial_tables.py  60f8ccac2c62_add_apps_table.py  65cba85a4cd0_initial_tables.py
backend/api/: dependencies.py  v1.py
backend/apps/apps/: __init__.py  crud.py  models.py  routes.py
backend/apps/auth/: __init__.py  crud.py  routes.py
backend/apps/users/: crud.py  models.py  routes.py
backend/backend/: init_demo_data.py  main.py
backend/backend/alembic/: env.py
backend/backend/api/: dependencies.py  uploader.py  v1.py
backend/backend/apps/: crud.py  models.py  routes.py
backend/backend/auth/: crud.py  models.py  routes.py
backend/backend/core/: config.py  database.py  security.py
backend/backend/users/: __init__.py  crud.py  models.py  routes.py
backend/core/: config.py  database.py  security.py
backend/src/: dependencies.py  main.py  utils.py
backend/src/accounts/: emails.py  models.py  schemas.py  services.py
backend/src/api_keys/: models.py  services.py
backend/src/apps/: models.py  schemas.py  services.py
backend/src/auth/: exceptions.py  models.py  schemas.py  services.py
backend/src/core/: config.py  exceptions.py  logging.py
backend/tests/: README.md  conftest.py  test_health.py  test_test.py
docs/: fastapi.md  maps.md  (+2 more)
temporal/: Dockerfile  README.md  base.py  pyproject.toml
temporal/geospatial_mapping_app/: __init__.py  dataset_post_upload_activities.py  dataset_post_upload_workflows.py  functions.py  models.py  worker.py
temporal/tests/: conftest.py
workflows/: pyproject.toml
workflows/geospatial_mapping_app/: post_dataset_upload.py  worker.py  workflows.py
(+139 files in other folders)
