[project]
name = "temporal-workflow"
version = "0.1.0"
description = "Temporal.io Python SDK worfklows"
authors = [
    {name = "taufiq.ibrahim@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pydantic (>=2.11.3,<3.0.0)",
    "temporalio (>=1.10.0,<2.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "minio (>=7.2.15,<8.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[tool.pytest.ini_options]
pythonpath = ["."]
# asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
